# curl-l10n

./: CMakeLists.txt  README.md  build-all.sh
.github/workflows/: main.yml
source/ru/: PACKAGE_DESCRIPTION  libcurl.po
